package com.example.springkatte.pets.adapter;

public class PetsController {
    
}
